[tool.poetry]
name = "imaginaryfrightenedpackagedsoftware"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
restkit = "^4.2.2"
PyGithub = "^1.53"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
